--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
 
             <div id="plotImage" style="cursor: auto">
                 <div class="image_centering">
-                <img src="/static_data/background.png" id="plotImage1" alt="Generated Plot" class="image">
+                <img src="static_data/background.png" id="plotImage1" alt="Generated Plot" class="image">
                 <canvas id="myCanvas" width="2274" height="1024" style="position: relative;" class="image"></canvas>
-                <img src="/static_data/foreground.png" id="plotImage2" alt="Generated Plot" class="image">
+                <img src="static_data/foreground.png" id="plotImage2" alt="Generated Plot" class="image">
                 <div class="point" id="point"></div>
                 </div>
             </div>
